--- a/Nitzsche/index.html
+++ b/Nitzsche/index.html
@@ -7,11 +7,7 @@
     <title>Nitzsche</title>
   </head>
   <body>
-    <div id="root">
-      <div class="container">
-
-      </div>
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
